bakcground image rendering but not displaying since it has no width, need to fix this with ... display flex and splitting the app in two main divs... Flat list and Map

--- a/assets/stylesheets/_cards.scss
+++ b/assets/stylesheets/_cards.scss
@@ -5,6 +5,7 @@
   background-position: center;
   color: white;
   position: relative;
+  border: 1px solid red;
   &.active {
     border: 10px solid red;
   }
