create new div on app.js in order to split the screen in two horizontally

--- a/assets/stylesheets/_cards.scss
+++ b/assets/stylesheets/_cards.scss
@@ -5,9 +5,8 @@
   background-position: center;
   color: white;
   position: relative;
-  border: 1px solid red;
   &.active {
-    border: 10px solid red;
+    border: 10px solid #BADA55;
   }
 }
 .card-user {
