--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -40,6 +40,6 @@ body {
 .marker {
   height: 20px;
   width: 20px;
-  background-color: red;
+  background-color: #BADA55;
   border-radius: 50%;
 }
